# ea-code-v2

./: .gitignore  AGENTS.md  CLAUDE.md
docs/: built-in-templates.md  ea-code-v2.md  slos.md
docs/adr/: 001-dynamic-pipeline-execution.md  002-session-group-semantics.md  003-hive-api-bundling.md  004-feature-flags.md  005-canonical-template-variables.md
docs/implementation/: Phase1.md  Phase2.md  Phase3.md  Phase4.md  Phase5.md  Phase6.md  README.md
docs/reviews/: Phase1-Review-Report.md  Phase2-Review-Report.md  Phase3-Review-Report.md  Phase4-Review-Report.md  (+1 more)
frontend/desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/desktop/src-tauri/icons/: icon.icns
frontend/desktop/src-tauri/src/: lib.rs  main.rs
frontend/desktop/src-tauri/src/commands/: hive_api.rs  hive_monitor.rs  mod.rs  pipeline.rs  templates.rs
frontend/desktop/src-tauri/src/hive_client/: chat.rs  error.rs  health.rs  lifecycle.rs  mod.rs  providers.rs  sse.rs  streaming.rs  versions.rs
frontend/desktop/src-tauri/src/models/: events.rs  graph_analysis.rs  graph_validation.rs  mod.rs  pipeline.rs  settings.rs  storage.rs  templates.rs  validation.rs
frontend/desktop/src-tauri/src/orchestrator/: helpers.rs  mod.rs  pipeline.rs  plan_gate.rs  prompt_renderer.rs  session_manager.rs  stage_runner.rs  user_questions.rs
frontend/desktop/src-tauri/src/orchestrator/graph_executor/: mod.rs  scheduler.rs  tests.rs  topology.rs
frontend/desktop/src-tauri/src/prompts/: renderer.rs
frontend/desktop/src-tauri/src/storage/: builtin_prompts.rs  builtin_templates.rs  mod.rs  templates.rs
(+57 files in other folders)
